--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,6 @@ dist
 
 # TernJS port file
 .tern-port
+public/videos/HOD Wherry Maud Sailings 2021.mp4
+public/videos/LowMB Wherry Maud summer Sailings 2021.mp4
+public/videos/Version 1.Wherry Maud Sailings 2021.mp4
